fix: font not loading on mobile, minor design ajustment

--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-@font-face {
-    font-family: 'Press Start 2P', system-ui;
-    src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-}
-
-
-@font-face {
-    font-family: 'Play', sans-serif;
-    src: url('https://fonts.googleapis.com/css2?family=Play&display=swap');
-}
-
-@font-face {
-    font-family: 'IBM Plex Mono', monospace;
-    src: url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,700&display=swap');;
-}
-
 @media (min-width: 320px) and (max-width: 999px) {
 
     .main_info {
